--- a/src/prism-tomorrow.css
+++ b/src/prism-tomorrow.css
@@ -29,8 +29,8 @@ pre[class*='language-'] {
 
 /* Code blocks */
 pre[class*='language-'] {
-  padding: 1em;
-  margin: 0.5em 0;
+  padding: 4px;
+  margin: 0px;
   overflow: auto;
 }
 
